# maze-anomaly-detector

./: CMakeLists.txt  DESCRIPTION.md  DOCUMENTATION.md  INSTRUCTION.md  LICENSE.md  README.md  STRUCTURE.md  build_core.bat  check_imports.py  requirements.txt  setup.bat
core/: defect_core.cpp  maze_core.cpp  physics_core.cpp
detector/: analyzer.py  reporter.py  visualizer.py
maze/: exporter.py  generator.py  validator.py
scripts/: detect_defects.py  generate_maze.py
